--- a/index.html
+++ b/index.html
@@ -6,12 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="imagenes/iconopag.png">
     <link rel="stylesheet" href="estilo.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Rubik+Microbe&family=Rubik+Wet+Paint&display=swap" rel="stylesheet">
     <title>TysonWeb</title>
 </head>
 <body>
     <header class="nav-container">
         <nav class="nav">
+          <div class="contflex">   
               <a href="#"><img class="logo" src="imagenes/iconopag.png" alt="logo"></a>
+              <p>Freelancer<br>Developer</p>
+          </div>    
             <ul class="item-container">
                 <li><a href="#" class="nav-item">Mi perfil</a></li>
                 <li><a href="#" class="nav-item">Trabajos</a></li>
@@ -19,6 +25,24 @@
             </ul>
         </nav>
     </header>
+    <section class="hero">
+        <h1>Programador Web</h1>
+    </section>
+    <section class="perfil">
+        <h2>Mis conocimientos:</h2>
+        <p>Html 5 </p>
+        <p>CSS</p>
+        <p>JavaScript</p>
+    </section>
+    <section class="trabajos">
+        <h3>Proyectos</h3>
+        <div class="img-trabajos">
+            <img src="imagenes/trabajos.jpg" alt="">
+            <img src="imagenes/trabajos.jpg" alt="">
+            <img src="imagenes/trabajos.jpg" alt="">
+        </div>
+
+    </section>
       
 </body>
 </html>
