--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <nav class="nav">
           <div class="contflex">   
               <a href="#"><img class="logo" src="imagenes/iconopag.png" alt="logo"></a>
-              <p>Freelancer<br>Developer</p>
+              <a href="#"><p>Freelancer<br>Developer</p></a>
           </div>    
             <ul class="item-container">
-                <li><a href="#" class="nav-item">Mi perfil</a></li>
-                <li><a href="#" class="nav-item">Trabajos</a></li>
+                <li><a href="#perfil" class="nav-item">Mi perfil</a></li>
+                <li><a href="#proyectos" class="nav-item">Trabajos</a></li>
                 <li><a href="#" class="nav-item">Contacto</a></li>
             </ul>
         </nav>
@@ -28,21 +28,37 @@
     <section class="hero">
         <h1>Programador Web</h1>
     </section>
-    <section class="perfil">
-        <h2>Mis conocimientos:</h2>
-        <p>Html 5 </p>
-        <p>CSS</p>
-        <p>JavaScript</p>
+    <section class="perfil" id="perfil">
+        <h2>Conocimientos en:</h2>
+        <a href="https://es.wikipedia.org/wiki/HTML5" target="_blank"><p>Html 5 </p></a>
+        <a href="https://es.wikipedia.org/wiki/CSS" target="_blank"><p>CSS</p></a>
+        <a href="https://es.wikipedia.org/wiki/JavaScript" target="_blank"><p>JavaScript</p></a>
     </section>
-    <section class="trabajos">
+   
+   
+    <section class="trabajos" id="proyectos">
         <h3>Proyectos</h3>
-        <div class="img-trabajos">
-            <img src="imagenes/trabajos.jpg" alt="">
-            <img src="imagenes/trabajos.jpg" alt="">
-            <img src="imagenes/trabajos.jpg" alt="">
+       <div class="container-carta">
+            <div class="carta">
+               <a href="#"><img src="imagenes/trabajos.jpg" alt=""></a> 
+            </div>
+            <div class="carta">
+                <a href="#"><img src="imagenes/trabajos.jpg" alt=""></a> 
+            </div>
+            <div class="carta">
+                <a href="#"><img src="imagenes/trabajos.jpg" alt=""></a> 
+            </div>
+            <div class="carta">
+                <a href="#"><img src="imagenes/trabajos.jpg" alt=""></a>  
+            </div>
+            <div class="carta">
+                <a href="#"><img src="imagenes/trabajos.jpg" alt=""></a> 
+            </div>
+            <div class="carta">
+                <a href="#"><img src="imagenes/trabajos.jpg" alt=""></a> 
+            </div>
         </div>
-
     </section>
-      
+        
 </body>
 </html>
