--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
     <section id="contact">
             <h3>Formas de contactarme:</h3>
-        <a class="btn-contacto" href="https://codepen.io/Danilo1144" target="_blank" id="profile-link"><i class="fa-brands fa-github-square"></i>GitHub</a>
+        <a class="btn-contacto" href="DaniloRiccardi/portafolio.github.io" target="_blank" id="profile-link"><i class="fa-brands fa-github-square"></i>GitHub</a>
         <a class="btn-contacto" href="#"><i class="fa-brands fa-facebook-square"></i></i>Facebook</a>
         <a class="btn-contacto" href="#"><i class="fa-brands fa-instagram"></i>Instagram</a>
     </section>
