--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <a class="btn-contacto" target="_blank" href="https://github.com/DaniloRiccardi" target="_blank" id="profile-link"><i class="fa-brands fa-github-square"></i>GitHub</a>
         <a class="btn-contacto" target="_blank" href="https://www.facebook.com/danilo.riccardi.3/"><i class="fa-brands fa-facebook-square"></i></i>Facebook</a>
         <a class="btn-contacto" target="_blank" href="https://www.instagram.com/daniriccardi11/?hl=es-la"><i class="fa-brands fa-instagram"></i>Instagram</a>
-        <a class="btn-contacto" target="_blank" href="#"><i class="fa-solid fa-envelope"></i>Email:daniricca11@gmail.com</a>
+        <a class="btn-contacto" target="_blank" href="daniricca11@gmail.com"><i class="fa-solid fa-envelope"></i>daniricca11@gmail.com</a>
     </section>
 
     <footer id="footer">
