--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <section id="hero">
             <h1 id="titulo">Danilo Riccardi</h1>
-            <p id="subtitulo">Full stack <span>Developer.</span> </p>
+            <p id="subtitulo">Full stack <span>Developer</span> </p>
         </section>
 
         <section id="nav-container">
